# picolisp

./: CHANGES  ReleaseNotes  configure  configure.ac  lib.l
autom4te.cache/: output.0  requests  traces.0
doc/: faq.html  refA.html  refC.html  refL.html  refO.html  refR.html
ersatz/: lib.l
lib/: misc.l
src64/: version.l
